minor styling on the frontend and added gin backend. going to setup the intent router + confluent stuff next.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,20 @@ htmlcov/
 
 node_modules/
 npm-debug.log*
+
+# Binaries
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Output directories
+/bin/
+/obj/
+/pkg/
+
+# IDE/editor files
+.vscode/
+.idea/
+*.swp
