intent router setup, still may need tweaking but should undergo testing first

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     container_name: incident-command-backend
     ports:
       - "8080:8080"
+    env_file:
+      - .env
     networks:
       - dd_net
 networks:
