--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,39 @@
 version: "3"
 services:
-  datadog:
-    image: gcr.io/datadoghq/agent:latest
-    environment:
-      - DD_API_KEY=${DD_API_KEY}
-      - DD_SITE=${DD_SITE}
-      - DD_LOGS_ENABLED=true
-      - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
-    expose:
-      - "8125:8125/udp"  # DogStatsD
-      - "8126:8126/tcp"  # APM Trace Agent
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /proc/:/host/proc/:ro
-      - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
-    networks:
-      - dd_net
-  dummy-app:
-    build:
-      context: ./dummy_app
-      dockerfile: Dockerfile
-    container_name: dummy-app
-    environment:
-      - DD_SERVICE=dummy-checkout
-      - DD_ENV=demo
-      - DD_VERSION=1.0.0
-      - DD_AGENT_HOST=datadog  # <--- key fix
-    ports:
-      - "8000:8000"
-    command: >
-      ddtrace-run python -m uvicorn app:app --host 0.0.0.0 --port 8000
-    depends_on:
-      - datadog
-    networks:
-      - dd_net
+  # datadog:
+  #   image: gcr.io/datadoghq/agent:latest
+  #   environment:
+  #     - DD_API_KEY=${DD_API_KEY}
+  #     - DD_SITE=${DD_SITE}
+  #     - DD_LOGS_ENABLED=true
+  #     - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
+  #   expose:
+  #     - "8125:8125/udp"  # DogStatsD
+  #     - "8126:8126/tcp"  # APM Trace Agent
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #     - /proc/:/host/proc/:ro
+  #     - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
+  #   networks:
+  #     - dd_net
+  # dummy-app:
+  #   build:
+  #     context: ./dummy_app
+  #     dockerfile: Dockerfile
+  #   container_name: dummy-app
+  #   environment:
+  #     - DD_SERVICE=dummy-checkout
+  #     - DD_ENV=demo
+  #     - DD_VERSION=1.0.0
+  #     - DD_AGENT_HOST=datadog  # <--- key fix
+  #   ports:
+  #     - "8000:8000"
+  #   command: >
+  #     ddtrace-run python -m uvicorn app:app --host 0.0.0.0 --port 8000
+  #   depends_on:
+  #     - datadog
+  #   networks:
+  #     - dd_net
   frontend:
     build:
       context: ./frontend
