--- a/agents/specialized_agents/moderator_agent/Dockerfile
+++ b/agents/specialized_agents/moderator_agent/Dockerfile
@@ -2,12 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY common ./common
-COPY specialized_agents/metrics_agent ./agents/specialized_agents/metrics_agent
+ENV AGENT_WAIT_TIMEOUT_SECONDS="180"
+ENV AGENT_POLL_INTERVAL_SECONDS="2"
 
-COPY specialized_agents/metrics_agent/requirements.txt /app/requirements.txt
+COPY common ./common
+COPY specialized_agents/moderator_agent ./agents/specialized_agents/moderator_agent
+
+COPY specialized_agents/moderator_agent/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
 ENV PYTHONPATH=/app
 
-CMD ["python", "agents/specialized_agents/metrics_agent/main.py"]
+CMD ["python", "agents/specialized_agents/moderator_agent/main.py"]
