--- a/agents/specialized_agents/metrics_agent/requirements.txt
+++ b/agents/specialized_agents/metrics_agent/requirements.txt
@@ -1,5 +1,6 @@
-confluent-kafka==2.6.1
-requests==2.32.3
-python-dotenv==1.0.1
-pydantic==2.9.2
-google-genai==1.56.0
+confluent-kafka
+requests
+google-genai
+Pillow
+firebase-admin
+protobuf
