--- a/docker/datadog/postgres.d/conf.yaml
+++ b/docker/datadog/postgres.d/conf.yaml
@@ -1,7 +1,7 @@
 init_config: {}
 
 instances:
-  - host: 172.21.0.3
+  - host: postgres
     port: 5432
     username: dummy
     password: dummypw
@@ -18,4 +18,10 @@ logs:
     tags:
       - env:demo
     # Set to true if you want multi-line support for stack traces
-    # multi_line: true
+    multi_line: true
+    # Consider including the following processing rules to capture stack traces
+    # and ensure proper service tagging. Adjust `service` or `tags` as needed.
+    processors:
+      - type: multi_line
+        pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2}'
+        name: new_log_start_with_date
