--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,105 @@
+# WebSocket upgrade header mapping
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
     listen 80;
-    server_name localhost;
+    server_name incident-commander.duckdns.org;
+    # Turn off server tokens in responses
+    server_tokens off;
+    # Trust Google Cloud Load Balancer proxy addresses so $remote_addr reflects the client.
+    # GCLB ranges: 130.211.0.0/22 and 35.191.0.0/16
+    set_real_ip_from 130.211.0.0/22;
+    set_real_ip_from 35.191.0.0/16;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
     root /usr/share/nginx/html;
     index index.html;
 
     # Gzip compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    # Health endpoint for Docker healthcheck
+    location /health {
+        access_log off;
+        add_header Content-Type text/plain;
+        return 200 "healthy\n";
+    }
+
+    # WebSocket endpoint - must be defined before general /api/ location
+    location /api/chat/ws {
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # Preserve the original proto forwarded by the LB (use $http_x_forwarded_proto when present)
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_read_timeout 86400;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+    }
+
+    # Proxy API requests to backend
+    location /api/ {
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header Authorization $http_authorization;
+        # leave Connection header alone except for websocket locations
+    }
+
+    # Proxy Datadog webhooks directly to backend (preserve secret header)
+    location /webhook/ {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header Authorization $http_authorization;
+        proxy_set_header X-Webhook-Secret $http_x_webhook_secret;
+        proxy_buffering off;
+        proxy_read_timeout 60s;
+    }
+
+    # Proxy OAuth/token exchange to backend
+    location /oauth/ {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header Authorization $http_authorization;
+        proxy_read_timeout 60s;
+    }
+
+    # Natural language query endpoint (SPA posts here when no incident selected)
+    location = /NL_query {
+        proxy_pass http://backend:8080/NL_query;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header Authorization $http_authorization;
+        proxy_read_timeout 60s;
+    }
+
+
+        # optional: if you specifically want /api/health to work even though backend has no /health
+    location = /api/health {
+        # If backend exposes a health endpoint at /health, proxy to it explicitly.
+        proxy_pass http://backend:8080/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    }
 
     # Handle client-side routing - this is crucial for SPA routing
     # All requests that don't match a file will serve index.html
@@ -19,6 +112,9 @@ server {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+
+    # Increase allowed upload size for file webhooks/uploads if needed
+    client_max_body_size 10M;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
